--- a/src/index.html
+++ b/src/index.html
@@ -64,27 +64,18 @@
             <li><a href="blog.html">بلاگ </a></li>
             <li class="dropdown">
               <a href="#"
-                ><span>صفحه </span>
+                ><span>انتخاب زبان </span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="#">صفحه کشویی 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>صفحه کشویی</span>
-                    <i class="bi bi-chevron-down toggle-dropdown"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">صفحه کشویی 1</a></li>
-                    <li><a href="#">صفحه کشویی 2</a></li>
-                    <li><a href="#">صفحه کشویی 3</a></li>
-                    <li><a href="#">صفحه کشویی 4</a></li>
-                    <li><a href="#">صفحه کشویی 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">صفحه کشویی 2</a></li>
-                <li><a href="#">صفحه کشویی 3</a></li>
-                <li><a href="#">صفحه کشویی 4</a></li>
+                <a href="#">
+                  <img src="../src/img/iran.png" alt="Persian" class="flag-icon">
+                  فارسی
+                </a>
+                <a href="#">
+                  <img src="../src/img/england.png" alt="English" class="flag-icon">
+                  انگلیسی
+                </a>
               </ul>
             </li>
             <li><a href="contact.html">تماس باما</a></li>
