header and new footer

--- a/Nova/about.html
+++ b/Nova/about.html
@@ -54,46 +54,36 @@
       >
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Nova</h1>
+          <!-- <img src="img/logo.png" alt=""> -->
+          <h1 class="sitename">حیدری</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
             <li>
-              <a href="index.html" class="active">خانه<br /></a>
+              <a href="../src/index.html" class="active">خانه<br /></a>
             </li>
-            <li><a href="about.html">درباه ما</a></li>
-            <li><a href="services.html">خدمات</a></li>
-            <li><a href="portfolio.html">پروفایل</a></li>
-            <li><a href="team.html">تم</a></li>
-            <li><a href="blog.html">بلاگ </a></li>
+            <li><a href="../Nova/about.html">درباه ما</a></li>
+            <li><a href="../Nova/services.html">رزرو</a></li>
+            <li><a href="../Nova/portfolio.html">گالری کلینیک ما</a></li>
+            <li><a href="../Nova/contact.html">تماس باما</a></li>
+            <li><a href="../Nova/blog.html">بلاگ </a></li>
             <li class="dropdown">
               <a href="#"
-                ><span>صفحه </span>
+                ><span>انتخاب زبان </span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="#">صفحه کشویی 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>صفحه کشویی</span>
-                    <i class="bi bi-chevron-down toggle-dropdown"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">صفحه کشویی 1</a></li>
-                    <li><a href="#">صفحه کشویی 2</a></li>
-                    <li><a href="#">صفحه کشویی 3</a></li>
-                    <li><a href="#">صفحه کشویی 4</a></li>
-                    <li><a href="#">صفحه کشویی 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">صفحه کشویی 2</a></li>
-                <li><a href="#">صفحه کشویی 3</a></li>
-                <li><a href="#">صفحه کشویی 4</a></li>
+                <a href="#">
+                  <img src="../src/img/iran.png" alt="Persian" class="flag-icon">
+                  فارسی
+                </a>
+                <a href="#">
+                  <img src="../src/img/england.png" alt="English" class="flag-icon">
+                  انگلیسی
+                </a>
               </ul>
             </li>
-            <li><a href="contact.html">تماس باما</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -111,8 +101,8 @@
           <h1>درباره ما</h1>
           <nav class="breadcrumbs">
             <ol>
-              <li><a href="index.html">صفحه اصلی</a></li>
-              <li class="current">درباره ما</li>
+              <li><a href="../src/index.html">صفحه اصلی</a></li>
+              <li class="../Nova/about.html">درباره ما</li>
             </ol>
           </nav>
         </div>
