--- a/Nova/services.html
+++ b/Nova/services.html
@@ -54,52 +54,41 @@
       >
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Nova</h1>
+          <!-- <img src="img/logo.png" alt=""> -->
+          <h1 class="sitename">حیدری</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
             <li>
-              <a href="index.html">Home<br /></a>
+              <a href="../src/index.html" class="active">خانه<br /></a>
             </li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html" class="active">Services</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="../Nova/about.html">درباه ما</a></li>
+            <li><a href="../Nova/services.html">رزرو</a></li>
+            <li><a href="../Nova/portfolio.html">گالری کلینیک ما</a></li>
+            <li><a href="../Nova/contact.html">تماس باما</a></li>
+            <li><a href="../Nova/blog.html">بلاگ </a></li>
             <li class="dropdown">
               <a href="#"
-                ><span>Dropdown</span>
+                ><span>انتخاب زبان </span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="#">Dropdown 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>Deep Dropdown</span>
-                    <i class="bi bi-chevron-down toggle-dropdown"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">Deep Dropdown 1</a></li>
-                    <li><a href="#">Deep Dropdown 2</a></li>
-                    <li><a href="#">Deep Dropdown 3</a></li>
-                    <li><a href="#">Deep Dropdown 4</a></li>
-                    <li><a href="#">Deep Dropdown 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Dropdown 2</a></li>
-                <li><a href="#">Dropdown 3</a></li>
-                <li><a href="#">Dropdown 4</a></li>
+                <a href="#">
+                  <img src="../src/img/iran.png" alt="Persian" class="flag-icon">
+                  فارسی
+                </a>
+                <a href="#">
+                  <img src="../src/img/england.png" alt="English" class="flag-icon">
+                  انگلیسی
+                </a>
               </ul>
             </li>
-            <li><a href="contact.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
       </div>
     </header>
-
     <main class="main">
     
     </main>
