--- a/Nova/service-details.html
+++ b/Nova/service-details.html
@@ -39,44 +39,44 @@
 <body class="service-details-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
+    <div
+      class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
+    >
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Nova</h1>
+        <!-- <img src="img/logo.png" alt=""> -->
+        <h1 class="sitename">حیدری</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li>
+            <a href="index.html" class="active">خانه<br /></a>
+          </li>
+          <li><a href="../Nova/about.html">درباه ما</a></li>
+          <li><a href="../Nova/services.html">رزرو</a></li>
+          <li><a href="../Nova/portfolio.html">گالری کلینیک ما</a></li>
+          <li><a href="../Nova/contact.html">تماس باما</a></li>
+          <li><a href="../Nova/blog.html">بلاگ </a></li>
+          <li class="dropdown">
+            <a href="#"
+              ><span>انتخاب زبان </span>
+              <i class="bi bi-chevron-down toggle-dropdown"></i
+            ></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <a href="#">
+                <img src="../src/img/iran.png" alt="Persian" class="flag-icon">
+                فارسی
+              </a>
+              <a href="#">
+                <img src="../src/img/england.png" alt="English" class="flag-icon">
+                انگلیسی
+              </a>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
     </div>
   </header>
 
@@ -88,8 +88,8 @@
         <h1>Service Details</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Service Details</li>
+            <li><a href="../src/index.html">Home</a></li>
+            <li class="../Nova/service-details.html">Service Details</li>
           </ol>
         </nav>
       </div>
